# farpost-lineup-recommender

./: .env  .gitignore  Procfile  README.md  attacking_stats.csv  away_team.csv  defending_stats.csv  fast_api.py  fixture_difficulty_rating.csv  fixtures_matchweek_10.csv  gcp-cloud-sql-connection-test.py  goalkeeping_stats.csv  home_team.csv  injuries.csv  main.py  pyproject.toml  requirements.txt  scraper.py  team_attacking_stats.csv  team_defending_stats.csv
.devcontainer/: devcontainer.json
